--- a/ResidentManagement/web/WEB-INF/web.xml
+++ b/ResidentManagement/web/WEB-INF/web.xml
@@ -20,15 +20,17 @@
         <servlet-name>NavigationServlet</servlet-name>
         <servlet-class>controller.NavigationServlet</servlet-class>
     </servlet>
-    
     <servlet>
         <servlet-name>RegisterAccountServlet</servlet-name>
         <servlet-class>controller.RegisterAccountServlet</servlet-class>
     </servlet>
-    
     <servlet>
         <servlet-name>RegistrationProcessServlet</servlet-name>
         <servlet-class>controller.RegistrationProcessServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PoliceUpdateAccountServlet</servlet-name>
+        <servlet-class>controller.PoliceUpdateAccountServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
@@ -50,15 +52,17 @@
         <servlet-name>NavigationServlet</servlet-name>
         <url-pattern>/nav</url-pattern>
     </servlet-mapping>
-    
     <servlet-mapping>
         <servlet-name>RegisterAccountServlet</servlet-name>
         <url-pattern>/RegisterAccount</url-pattern>
     </servlet-mapping>
-    
     <servlet-mapping>
         <servlet-name>RegistrationProcessServlet</servlet-name>
         <url-pattern>/registration</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PoliceUpdateAccountServlet</servlet-name>
+        <url-pattern>/PoliceUpdateAccount</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>
