--- a/ResidentManagement/web/WEB-INF/web.xml
+++ b/ResidentManagement/web/WEB-INF/web.xml
@@ -32,6 +32,10 @@
         <servlet-name>PoliceUpdateAccountServlet</servlet-name>
         <servlet-class>controller.PoliceUpdateAccountServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>RequestListServlet</servlet-name>
+        <servlet-class>controller.RequestListServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -63,6 +67,10 @@
     <servlet-mapping>
         <servlet-name>PoliceUpdateAccountServlet</servlet-name>
         <url-pattern>/PoliceUpdateAccount</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RequestListServlet</servlet-name>
+        <url-pattern>/RequestList</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>
