--- a/ResidentManagement/web/WEB-INF/web.xml
+++ b/ResidentManagement/web/WEB-INF/web.xml
@@ -40,6 +40,10 @@
         <servlet-name>RequestProcessServlet</servlet-name>
         <servlet-class>controller.RequestProcessServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>PaginationServlet</servlet-name>
+        <servlet-class>controller.PaginationServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -79,6 +83,10 @@
     <servlet-mapping>
         <servlet-name>RequestProcessServlet</servlet-name>
         <url-pattern>/RequestProcess</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PaginationServlet</servlet-name>
+        <url-pattern>/page</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>
